--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.8",
     "bootstrap": "^5.1.3",
+    "downloadjs": "^1.4.7",
     "firebase": "^9.6.7",
+    "html-to-image": "^1.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
