--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.8",
+    "antd-img-crop": "^4.1.0",
     "bootstrap": "^5.1.3",
     "downloadjs": "^1.4.7",
     "firebase": "^9.6.7",
