--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "downloadjs": "^1.4.7",
     "firebase": "^9.6.7",
     "html-to-image": "^1.9.0",
+    "moralis": "^1.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
+    "react-moralis": "^1.3.1",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^6.2.1",
